Support newer Trino and Presto
* Support Trino 419
* Support Presto 0.282 (https://github.com/prestodb/presto)
* Upgrade Gradle to 8.0
* Update backend dependencies
* Remove unused API '/label'
* Allow to specify MySQl, PostgreSQl or SQLite as the backend database